# graphy-UI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_linux.sh  conanfile.txt  env_linux.sh  linux_build.sh  update_submodule.py
.github/workflows/: blank.yml  mac.yml
src/: main.cpp  window.cpp  window.h
